package app.services.svg;

import java.util.Locale;

public class Svg {

    private static final String SVG_TEMPLATE = "<svg version=\"1.1\"\n" +
            "x=\"%d\" y=\"%d\"\n" +
            "viewBox=\"%s\" width=\"%s\" \n" +
            "preserveAspectRatio=\"xMinYMin\">";

    private static final String SVG_ARROW_DEFS = "<defs>\n" +
            "        <marker id=\"beginArrow\" markerWidth=\"12\" markerHeight=\"12\" refX=\"0\" refY=\"6\" orient=\"auto\">\n" +
            "            <path d=\"M0,6 L12,0 L12,12 L0,6\" style=\"fill: #000000;\" />\n" +
            "        </marker>\n" +
            "        <marker id=\"endArrow\" markerWidth=\"12\" markerHeight=\"12\" refX=\"12\" refY=\"6\" orient=\"auto\">\n" +
            "            <path d=\"M0,0 L12,6 L0,12 L0,0 \" style=\"fill: #000000;\" />\n" +
            "        </marker>\n" +
            "    </defs>";

    private static final String SVG_RECT_TEMPLATE = "<rect x=\"%f\" y=\"%f\" width=\"%f\" height=\"%f\" style=\"%s\"/>";

    private static final String SVG_LINE_TEMPLATE = "<line x1=\"%f\" y1=\"%f\" x2=\"%f\" y2=\"%f\" stroke=\"black\"/>";

    private static final String SVG_ARROW_TEMPLATE = "<line x1=\"%f\" y1=\"%f\" x2=\"%f\" y2=\"%f\" stroke=\"black\" marker-start=\"url(#beginArrow)\" marker-end=\"url(#endArrow)\"/>";

    private StringBuilder svg = new StringBuilder();

//    public Svg(String viewBox, String width, String height) {
//        svg.append("");

    /// /        String.format("%f tester %s tester", 100.0, "nej");
//
//
//    }
    public Svg(int x, int y, String viewBox, String width) {
        Locale.setDefault(new Locale("US"));

        svg.append(String.format(SVG_TEMPLATE, x, y, viewBox, width));
        svg.append(SVG_ARROW_DEFS);
    }

    public void addRectangle(double x, double y, double width, double height, String style) {
        svg.append(String.format(SVG_RECT_TEMPLATE, x, y, width, height, style));
    }

    public void addLine(double x1, double y1, double x2, double y2, String style) {
        svg.append(String.format(SVG_LINE_TEMPLATE, x1, y1, x2, y2, style));
    }

    public void addArrow(double x1, double y1, double x2, double y2) {
        // Kald addLine med en style der indeholder pilehoveder
        svg.append(String.format(SVG_ARROW_TEMPLATE, x1, y1, x2, y2));
    }

    public void addText(int x, int y, int rotation, String text) {
    }

    public void addSvg(Svg innerSvg) {
        svg.append(innerSvg.toString());
    }

    public String toString() {

        return svg.append("</svg>").toString();
    }

}
